# rp235x-boot

./: .gitignore  Cargo.toml  build.rs  memory.x
.cargo/: config.toml
embassy/: .gitrepo
src/: main.rs
