[package]
name = "rp235x-boot"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.4"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }
embassy-boot-rp = { version = "0.9.0", path = "embassy/embassy-boot-rp" }
embassy-rp = { version = "0.9.0", path = "embassy/embassy-rp", features = ["rp235xa"] }
embassy-sync = { version = "0.7.2", path = "embassy/embassy-sync" }
embassy-time = { version = "0.5.0", path = "embassy/embassy-time", default-features = false }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"

[features]
defmt = [
      "dep:defmt",
      "dep:defmt-rtt",
      "embassy-boot-rp/defmt",
      "embassy-rp/defmt",
]

[profile.release]
debug=true
opt-level = 's'

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf" }
]
